--- a/src/main/resources/static/views/shop.html
+++ b/src/main/resources/static/views/shop.html
@@ -77,6 +77,18 @@
 		      <input type="number" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="medicinePrice">
 		    </div>
 		  </div>
+		  <div class="form-group">
+		    <label class="control-label col-sm-2" for="genericsName">Total Amount:</label>
+		    <div class="col-sm-10">
+		      <input type="number" class="form-control" id="genericsName" placeholder=""  ng-model="medicinePrice">
+		    </div>
+		  </div>
+		  	<div class="form-group">
+		    <label class="control-label col-sm-2" for="genericsName">Total Amount(With Commision):</label>
+		    <div class="col-sm-10">
+		      <input type="number" class="form-control" id="genericsName" placeholder=""  ng-model="medicinePrice" readonly>
+		    </div>
+		  </div>		  
 		 <div class="form-group">
 		    <label class="control-label col-sm-2" for="genericsName">Payment*:</label>
 		    <div class="col-sm-10">
