Product Sales Front End

--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -4,416 +4,22 @@
 <title>Ashrab Pharmacy</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+<!-- -BackGround Part -->
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="/views/css/background.css" rel="stylesheet">
+<script src="/views/js/background.js"></script>
+<!-- -BackGround Part -->
+
 </head>
 <body>
-<div ng-app="myApp" ng-controller="myCtrl" class="container">
-<div class="container-fluid">
-  <h1>WellCome To Ashraf Pharmacy</h1> 
-	<p>Ashraf Pharmacy Moto</p>
-	<button type="button" id="companyBtn" name="companyBtn" class="btn btn-primary" data-toggle="modal" data-target="#companyModal">Add Comapny</button>
-	<button type="button" id="companyBtn"name="genericsBtn" class="btn btn-primary" data-toggle="modal" data-target="#genericsModal">Add Generic</button>
-	<button type="button" id="companyBtn"name="medicineTypeBtn" class="btn btn-primary" data-toggle="modal" data-target="#medicineTypeModal">Add Medicine Type</button>
-	<button type="button" id="companyBtn"name="medicineBtn" class="btn btn-primary" data-toggle="modal" data-target="#medicineModal">Add Medicine </button>
-	<button type="button" id="companyBtn"name="medicineBtn" class="btn btn-primary" data-toggle="modal" data-target="#salesPersonModal">Add Sales Person </button>
-	<a href="/shop" class="btn btn-primary" type="button" id="companyBtn"name="medicineBtn" >Enter Into Shop</a>
-	
-</div>
-
-
-
-
-
-<!--  modal For Add MedicimeComapny -->
-<!-- Modal -->
-<div class="modal fade" id="companyModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLabel">Company Form</h3>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-       	<form class="form-horizontal" action="#">
-  			<div class="form-group">
-		    <label class="control-label col-sm-2" for="companyName">Company Name*:</label>
-		    <div class="col-sm-10">
-		      <input type="text" class="form-control" id="companyName" placeholder="Enter Company Name"  ng-model="companyName">
-		    </div>
-		  </div>
-		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="companyAddress">Company Address:</label>
-		    <div class="col-sm-10"> 
-		      <input type="text" class="form-control" id="companyAddress" placeholder="Enter Company Addres" ng-model="companyAddress">
-		    </div>
-		  </div>
-		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="companyRePresentative">Company RePresentative Name:</label>
-		    <div class="col-sm-10"> 
-		      <input type="text" class="form-control" id="companyRePresentative" placeholder="Enter Company RePresentative Name" ng-model="companyRePresentative">
-		    </div>
-		  </div>
-		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="contactInfo">RePresentative contactInfo:</label>
-		    <div class="col-sm-10"> 
-		      <input type="text" class="form-control" id="contactInfo" placeholder="Enter RePresentative contactInfo" ng-model="contactInfo">
-		    </div>
-		  </div>
-		</form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button  ng-click="onClickCompanyBtnSubmit()" class="btn btn-primary">Save Company</button>
-      </div>
-    </div>
+<div id="particles">
+  <div id="webcoderskull">
+    <h1>WellCome To Ashrab Pharmacy</h1> 
+	<h5>Ashraf Pharmacy Moto<h5>
+    
   </div>
 </div>
 
-
-<!--  modal For Add Medicine Generics -->
-<!-- Modal -->
-<div class="modal fade" id="genericsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLabel">Medicine Generics Form</h3>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-       	<form class="form-horizontal" action="#">
-  			<div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsName">Generics Name*:</label>
-		    <div class="col-sm-10">
-		      <input type="text" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="genericsName">
-		    </div>
-		  </div>
-		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsChemical">Generics Chemical:</label>
-		    <div class="col-sm-10"> 
-		      <input type="text" class="form-control" id="genericsChemical" placeholder="Enter Generics Chemical" ng-model="genericsChemical">
-		    </div>
-		  </div>
-		</form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button  ng-click="onClickGenericBtnSubmit()" class="btn btn-primary">Save Generic</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-<!--  modal For Add Medicine Type -->
-<!-- Modal -->
-<div class="modal fade" id="medicineTypeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLabel">Medicine Type Form</h3>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-       	<form class="form-horizontal" action="#">
-  			<div class="form-group">
-		    <label class="control-label col-sm-2" for="medicineType">Medicine Type*:</label>
-		    <div class="col-sm-10">
-		      <input type="text" class="form-control" id="medicineType" placeholder="Enter Medicine type(Powder,Suspention)" ng-model="medicineType">
-		    </div>
-		  </div>
-		</form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button  ng-click="onClickMedicineTypeBtnSubmit()" class="btn btn-primary">Save Type</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!--  modal For Add Medicine Sales Person -->
-<!-- Modal -->
-<div class="modal fade" id="salesPersonModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLabel">Medicine Sales Person Form</h3>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-       	<form class="form-horizontal" action="#">
-  			<div class="form-group">
-		    <label class="control-label col-sm-2" for="salesPersonName">Name*:</label>
-		    <div class="col-sm-10">
-		      <input type="text" class="form-control" id="salesPersonName" placeholder="Enter Medicine sales Person Name" ng-model="salesPersonName">
-		    </div>
-		  </div>
-		</form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button  ng-click="onClicksalesPersonBtnSubmit()" class="btn btn-primary">Save Type</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!--  modal For Add Medicine -->
-<!-- Modal -->
-<div class="modal fade" id="medicineModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLabel">Medicine Form</h3>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-       	<form class="form-horizontal" action="#">
-  			<div class="form-group">
-		    <label class="control-label col-sm-2" for="medicineName">Medicine Name*:</label>
-		    <div class="col-sm-10">
-		      <input type="text" class="form-control" id="medicineName" placeholder="Enter Medicine Name"  ng-model="medicineName">
-		    </div>
-		  </div>
-		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Company:</label>
-		    <div class="col-sm-10"> 
-		    	 <select class="custom-select" ng-model="medicineCompany"ng-options="company as company.name for company in companies"
-		    	  ng-change="loadGenerics()">
-				</select>
-		    </div>
-		  </div>
-		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Generic:</label>
-		    <div class="col-sm-10"> 
-		    	 <select class="custom-select" ng-model="medicineGeneric"ng-options="generic as generic.generic for generic in generics"
-		    	  ng-change="loadType()">
-				</select>
-		    </div>
-		  </div>
-		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Type:</label>
-		    <div class="col-sm-10"> 
-		    	 <select class="custom-select" ng-model="medicineType"ng-options="type as type.name for type in types"></select>
-		    </div>
-		  </div>
-		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsName"> Description*:</label>
-		    <div class="col-sm-10">
-		      <input type="text" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="medicineDescription">
-		    </div>
-		  </div>
-		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsName"> Dosage*:</label>
-		    <div class="col-sm-10">
-		      <input type="text" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="medicineDosage">
-		    </div>
-		  </div>
-		 <div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsName"> Price(I/P)(Important!)*:</label>
-		    <div class="col-sm-10">
-		      <input type="number" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="medicinePrice">
-		    </div>
-		  </div>
-		  priceIP
-		</form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button  ng-click="onClickMedicineBtnSubmit()" class="btn btn-primary">Save Medicine</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-
-
-</div>
 </body>
-</html>
-
-
-
-
-
-
-
-<script>
-	var app = angular.module('myApp', []);
-	app.controller('myCtrl', function($scope, $http) {
-		/**************************Batch Fetch************************/
- 		function loadCompany(){
-			  $http({
-				    method : "GET",
-				      url : "/company/"
-				  }).then(function mySuccess(response) {
-					  $scope.companies = response.data;
-					  alert(response.data[0].name);
-				  }, function myError(response) {
-				    $scope.myWelcome = response.statusText;
-				  });
-		};
-		loadCompany();
-		/**************************Batch Course************************/
- 	  $scope.loadGenerics=function(){
-		  $http({
-			    method : "GET",
-			      url :"/generic/",
-			  }).then(function mySuccess(response) {
-				  $scope.generics = response.data;
-			  }, function myError(response) {
-			    $scope.myWelcome = response.statusText;
-			  }); 
-	  }; 
-		/**************************Batch Teacher************************/
-  	  $scope.loadType=function(){
- 		  $http({
- 			    method : "GET",
- 			      url :"/type/",
- 			  }).then(function mySuccess(response) {
- 				  $scope.types = response.data;
- 			  }, function myError(response) {
- 			    $scope.myWelcome = response.statusText;
- 			  });
-	  }; 
-	/**************************company Save Button**********************/
-	$scope.onClickCompanyBtnSubmit=function(){
-		  
-		var company={
-			"name":$scope.companyName,
-			"address":$scope.companyAddress,
-			"representative":$scope.companyRePresentative,
-			"contactInfo":$scope.contactInfo};
-		  $http({
-			  method: 'POST',
-			  url:"/company/add",
-			  data: JSON.stringify(company)
-			}).then(function (success) {
-				$("#companyModal").modal("hide");
-				$scope.companyName="";
-				$scope.companyAddress="";
-				$scope.companyRePresentative="";
-				$scope.contactInfo="";
-			  alert("Company Added SucessFully");
-			  loadCompany();
-			}, function (error) {
-			  alert("Operation Failed"+error.data);
-			});
-	};
-		/**************************generic Save Button**********************/
-	$scope.onClickGenericBtnSubmit=function(){
-		  
-		var generic={"generic":$scope.genericsName,"chemical":$scope.genericsChemical};
-		  $http({
-			  method: 'POST',
-			  url:"/generic/add",
-			  data: JSON.stringify(generic)
-			}).then(function (success) {
-				$("#genericsModal").modal("hide");
-				$scope.genericsName="";
-				$scope.genericsChemical="";
-			  alert("Generic Added SucessFully");
-			}, function (error) {
-			  alert("Operation Failed"+error.data);
-			});
-	};
-			/**************************Type Save Button**********************/
-	$scope.onClickMedicineTypeBtnSubmit=function(){
-		  
-		var type={"name":$scope.medicineType};
-		  $http({
-			  method: 'POST',
-			  url:"/type/add",
-			  data: JSON.stringify(type)
-			}).then(function (success) {
-				$("#medicineTypeModal").modal("hide");
-				$scope.medicineType="";
-			  alert("Type Added SucessFully");
-			}, function (error) {
-			  alert("Operation Failed"+error.data);
-			});
-	};
-
-				/**************************Type Save Button**********************/
-	$scope.onClicksalesPersonBtnSubmit=function(){
-		  
-		var person={"name":$scope.salesPersonName};
-		  $http({
-			  method: 'POST',
-			  url:"/salesPerson/add",
-			  data: JSON.stringify(person)
-			}).then(function (success) {
-				$("#salesPersonModal").modal("hide");
-				$scope.salesPersonName="";
-			  alert("Sales Person Added SucessFully");
-			}, function (error) {
-			  alert("Operation Failed"+error.data);
-			});
-	};
-					/**************************Type Save Button**********************/
-	$scope.onClickMedicineBtnSubmit=function(){
-		//console.log($scope.medicineCompany.name);
-		//console.log($scope.medicineCompany);
-		var medicine={
-			"name":$scope.medicineName,
-			"company":$scope.medicineCompany,
-			"generic":$scope.medicineGeneric,
-			"type":	$scope.medicineType,
-			"description":$scope.medicineDescription,
-			"dosage":$scope.medicineDosage,
-			"priceIP":$scope.medicinePrice
-			};
-		  $http({
-			  method: 'POST',
-			  url:"/product/add",
-			  data: JSON.stringify(medicine)
-			}).then(function (success) {
-				$("#medicineModal").modal("hide");
-				$scope.medicineName="";
-				$scope.medicineCompany="";
-				$scope.medicineGeneric="";
-				$scope.medicineType="";
-				$scope.medicineDescription="";
-				$scope.medicineDosage="";
-				$scope.medicinePrice="";
-			  alert("Medicine  Added SucessFully");
-			}, function (error) {
-			  alert("Operation Failed"+error.data);
-			});
-	};
-	
-	/**********************************Generate Routine Btn*********************/
-/* 	$scope.onClickBtnGenerateRoutine=function(){
-		window.location.pathname = "/routine";
-	
-	}; */
-	  
-	  
-	  
-	});
-	
-	</script>
-	
-	
-	
-	
-
-
