--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -9,22 +9,15 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link href="/views/css/background.css" rel="stylesheet">
-<script src="/views/js/background.js"></script>
+
 
 </head>
 <body>
 
-
-
-
-<div ng-app="myApp" ng-controller="myCtrl" class="container">
-<div class="container-fluid">
+<div ng-app="myApp" ng-controller="myCtrl" class="container" id="particles" >
+<div class="container-fluid" >
   <h1>WellCome To Ashraf Pharmacy</h1> 
-	<p>Ashraf Pharmacy Moto    bhghghg</p>
+	<p>Ashraf Pharmacy Moto</p>
 	<button type="button" id="companyBtn" name="companyBtn" class="btn btn-primary" data-toggle="modal" data-target="#companyModal">Add Comapny</button>
 	<button type="button" id="companyBtn"name="genericsBtn" class="btn btn-primary" data-toggle="modal" data-target="#genericsModal">Add Generic</button>
 	<button type="button" id="companyBtn"name="medicineTypeBtn" class="btn btn-primary" data-toggle="modal" data-target="#medicineTypeModal">Add Medicine Type</button>
@@ -201,7 +194,7 @@
 		    </div>
 		  </div>
 		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsChemical">Generics Company:</label>
+		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Company:</label>
 		    <div class="col-sm-10"> 
 		    	 <select class="custom-select" ng-model="medicineCompany"ng-options="company as company.name for company in companies"
 		    	  ng-change="loadGenerics()">
@@ -209,7 +202,7 @@
 		    </div>
 		  </div>
 		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsChemical">Generics Generic:</label>
+		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Generic:</label>
 		    <div class="col-sm-10"> 
 		    	 <select class="custom-select" ng-model="medicineGeneric"ng-options="generic as generic.generic for generic in generics"
 		    	  ng-change="loadType()">
@@ -217,7 +210,7 @@
 		    </div>
 		  </div>
 		  <div class="form-group">
-		    <label class="control-label col-sm-2" for="genericsChemical">Generics Type:</label>
+		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Type:</label>
 		    <div class="col-sm-10"> 
 		    	 <select class="custom-select" ng-model="medicineType"ng-options="type as type.name for type in types"></select>
 		    </div>
@@ -240,6 +233,7 @@
 		      <input type="number" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="medicinePrice">
 		    </div>
 		  </div>
+		  priceIP
 		</form>
       </div>
       <div class="modal-footer">
@@ -270,17 +264,18 @@
 	var app = angular.module('myApp', []);
 	app.controller('myCtrl', function($scope, $http) {
 		/**************************Batch Fetch************************/
- 		function loadBatch(){
+ 		function loadCompany(){
 			  $http({
 				    method : "GET",
 				      url : "/company/"
 				  }).then(function mySuccess(response) {
 					  $scope.companies = response.data;
+					 // alert(response.data[0].name);
 				  }, function myError(response) {
 				    $scope.myWelcome = response.statusText;
 				  });
 		};
-		loadBatch();
+		loadCompany();
 		/**************************Batch Course************************/
  	  $scope.loadGenerics=function(){
 		  $http({
@@ -322,6 +317,7 @@
 				$scope.companyRePresentative="";
 				$scope.contactInfo="";
 			  alert("Company Added SucessFully");
+			  loadCompany();
 			}, function (error) {
 			  alert("Operation Failed"+error.data);
 			});
@@ -408,16 +404,20 @@
 			});
 	};
 	
-	/**********************************Generate Routine Btn*********************/salesPersonName
+	/**********************************Generate Routine Btn*********************/
 /* 	$scope.onClickBtnGenerateRoutine=function(){
 		window.location.pathname = "/routine";
 	
 	}; */
 	  
-	  alert("HDGHDGDDJG");
+	  
 	  
 	});
 	
 	</script>
+	
+	
+	
+	
 
 
