--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -196,7 +196,7 @@
 		  <div class="form-group">
 		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Company:</label>
 		    <div class="col-sm-10"> 
-		    	 <select class="custom-select" ng-model="medicineCompany"ng-options="company as company.name for company in companies"
+		    	 <select class="custom-select" ng-model="medicineCompany"ng-options="company.id as company.name for company in companies"
 		    	  ng-change="loadGenerics()">
 				</select>
 		    </div>
@@ -204,7 +204,7 @@
 		  <div class="form-group">
 		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Generic:</label>
 		    <div class="col-sm-10"> 
-		    	 <select class="custom-select" ng-model="medicineGeneric"ng-options="generic as generic.generic for generic in generics"
+		    	 <select class="custom-select" ng-model="medicineGeneric"ng-options="generic.id as generic.generic for generic in generics"
 		    	  ng-change="loadType()">
 				</select>
 		    </div>
@@ -212,7 +212,7 @@
 		  <div class="form-group">
 		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Type:</label>
 		    <div class="col-sm-10"> 
-		    	 <select class="custom-select" ng-model="medicineType"ng-options="type as type.name for type in types"></select>
+		    	 <select class="custom-select" ng-model="medicineType"ng-options="type.id as type.name for type in types"></select>
 		    </div>
 		  </div>
 		  <div class="form-group">
@@ -374,13 +374,18 @@
 	};
 					/**************************Type Save Button**********************/
 	$scope.onClickMedicineBtnSubmit=function(){
-		//console.log($scope.medicineCompany.name);
-		//console.log($scope.medicineCompany);
+		console.log($scope.medicineCompany.name);
+		console.log($scope.medicineCompany);
+		
+		
+		
+		
+		
 		var medicine={
 			"name":$scope.medicineName,
-			"company":$scope.medicineCompany,
-			"generic":$scope.medicineGeneric,
-			"type":	$scope.medicineType,
+			"company_id":$scope.medicineCompany,
+			"generic_id":$scope.medicineGeneric,
+			"type_id":	$scope.medicineType,
 			"description":$scope.medicineDescription,
 			"dosage":$scope.medicineDosage,
 			"priceIP":$scope.medicinePrice
