--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -24,7 +24,7 @@
 	<button type="button" id="companyBtn"name="medicineBtn" class="btn btn-primary" data-toggle="modal" data-target="#medicineModal">Add Medicine </button>
 	<button type="button" id="companyBtn"name="medicineBtn" class="btn btn-primary" data-toggle="modal" data-target="#salesPersonModal">Add Sales Person </button>
 	<a href="/shop" class="btn btn-primary" type="button" id="companyBtn"name="medicineBtn" >Enter Into Shop</a>
-	
+	<a href="/business" class="btn btn-primary" type="button" id="companyBtn"name="medicineBtn" >Business Analysis</a>
 </div>
 
 
@@ -44,10 +44,11 @@
       </div>
       <div class="modal-body">
        	<form class="form-horizontal" action="#">
-  			<div class="form-group">
-		    <label class="control-label col-sm-2" for="companyName">Company Name*:</label>
+  			<div class="form-group  has-error has-feedback companyName">
+		    <label class="control-label col-sm-2 " for="companyName">Company Name*:</label>
 		    <div class="col-sm-10">
-		      <input type="text" class="form-control" id="companyName" placeholder="Enter Company Name"  ng-model="companyName">
+		      <input type="text" class="form-control " id="companyName" placeholder="Enter Company Name"  ng-model="companyName">
+		      <span class="glyphicon glyphicon-remove form-control-feedback"></span>
 		    </div>
 		  </div>
 		  <div class="form-group">
@@ -92,8 +93,9 @@
       </div>
       <div class="modal-body">
        	<form class="form-horizontal" action="#">
-  			<div class="form-group">
+  			<div class="form-group  has-error has-feedback">
 		    <label class="control-label col-sm-2" for="genericsName">Generics Name*:</label>
+		     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
 		    <div class="col-sm-10">
 		      <input type="text" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="genericsName">
 		    </div>
@@ -130,10 +132,11 @@
       </div>
       <div class="modal-body">
        	<form class="form-horizontal" action="#">
-  			<div class="form-group">
+  			<div class="form-group has-error has-feedback">
 		    <label class="control-label col-sm-2" for="medicineType">Medicine Type*:</label>
 		    <div class="col-sm-10">
 		      <input type="text" class="form-control" id="medicineType" placeholder="Enter Medicine type(Powder,Suspention)" ng-model="medicineType">
+		    <span class="glyphicon glyphicon-remove form-control-feedback"></span>
 		    </div>
 		  </div>
 		</form>
@@ -159,10 +162,11 @@
       </div>
       <div class="modal-body">
        	<form class="form-horizontal" action="#">
-  			<div class="form-group">
+  			<div class="form-group has-error has-feedback">
 		    <label class="control-label col-sm-2" for="salesPersonName">Name*:</label>
 		    <div class="col-sm-10">
 		      <input type="text" class="form-control" id="salesPersonName" placeholder="Enter Medicine sales Person Name" ng-model="salesPersonName">
+		     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
 		    </div>
 		  </div>
 		</form>
@@ -187,32 +191,34 @@
       </div>
       <div class="modal-body">
        	<form class="form-horizontal" action="#">
-  			<div class="form-group">
+  			<div class="form-group has-error has-feedback">
 		    <label class="control-label col-sm-2" for="medicineName">Medicine Name*:</label>
 		    <div class="col-sm-10">
 		      <input type="text" class="form-control" id="medicineName" placeholder="Enter Medicine Name"  ng-model="medicineName">
+		      <span class="glyphicon glyphicon-remove form-control-feedback"></span>
 		    </div>
 		  </div>
-		  <div class="form-group">
+		  <div class="form-group has-error has-feedback">
 		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Company:</label>
 		    <div class="col-sm-10"> 
 		    	 <select class="custom-select" ng-model="medicineCompany"ng-options="company.id as company.name for company in companies"
 		    	  ng-change="loadGenerics()">
-				</select>
-		    </div>
+				</select><span class="glyphicon glyphicon-remove form-control-feedback"></span>
+		    </div> 
 		  </div>
-		  <div class="form-group">
+		  <div class="form-group has-error has-feedback">
 		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Generic:</label>
 		    <div class="col-sm-10"> 
 		    	 <select class="custom-select" ng-model="medicineGeneric"ng-options="generic.id as generic.generic for generic in generics"
 		    	  ng-change="loadType()">
-				</select>
+				</select><span class="glyphicon glyphicon-remove form-control-feedback"></span>
 		    </div>
 		  </div>
-		  <div class="form-group">
+		  <div class="form-group has-error has-feedback">
 		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Type:</label>
 		    <div class="col-sm-10"> 
 		    	 <select class="custom-select" ng-model="medicineType"ng-options="type.id as type.name for type in types"></select>
+		    	 <span class="glyphicon glyphicon-remove form-control-feedback"></span>
 		    </div>
 		  </div>
 		  <div class="form-group">
@@ -227,13 +233,12 @@
 		      <input type="text" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="medicineDosage">
 		    </div>
 		  </div>
-		 <div class="form-group">
+		 <div class="form-group has-error has-feedback">
 		    <label class="control-label col-sm-2" for="genericsName"> Price(I/P)(Important!)*:</label>
 		    <div class="col-sm-10">
 		      <input type="number" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="medicinePrice">
 		    </div>
 		  </div>
-		  priceIP
 		</form>
       </div>
       <div class="modal-footer">
@@ -263,6 +268,10 @@
 <script>
 	var app = angular.module('myApp', []);
 	app.controller('myCtrl', function($scope, $http) {
+		
+		
+		
+
 		/**************************Batch Fetch************************/
  		function loadCompany(){
 			  $http({
@@ -300,6 +309,10 @@
 	  }; 
 	/**************************company Save Button**********************/
 	$scope.onClickCompanyBtnSubmit=function(){
+		if(!$scope.companyName){
+			alert("company Name Must Not Be Empty");
+			return ;
+		}
 		  
 		var company={
 			"name":$scope.companyName,
@@ -324,6 +337,10 @@
 	};
 		/**************************generic Save Button**********************/
 	$scope.onClickGenericBtnSubmit=function(){
+		if(!$scope.genericsName){
+			alert("Generics Name Must Not Be Empty");
+			return ;
+		}
 		  
 		var generic={"generic":$scope.genericsName,"chemical":$scope.genericsChemical};
 		  $http({
@@ -341,6 +358,10 @@
 	};
 			/**************************Type Save Button**********************/
 	$scope.onClickMedicineTypeBtnSubmit=function(){
+		if(!$scope.medicineType){
+			alert("Medicine Type  Must Not Be Empty");
+			return ;
+		}
 		  
 		var type={"name":$scope.medicineType};
 		  $http({
@@ -358,6 +379,12 @@
 
 				/**************************Type Save Button**********************/
 	$scope.onClicksalesPersonBtnSubmit=function(){
+					
+		if(!$scope.salesPersonName){
+			alert("sales Person Name Must Not Be Empty");
+			return ;
+		}
+		 
 		  
 		var person={"name":$scope.salesPersonName};
 		  $http({
@@ -374,10 +401,11 @@
 	};
 					/**************************Type Save Button**********************/
 	$scope.onClickMedicineBtnSubmit=function(){
-		console.log($scope.medicineCompany.name);
-		console.log($scope.medicineCompany);
 		
-		
+		if(!($scope.medicineName && $scope.medicineGeneric && $scope.medicineType && $scope.medicinePrice)){
+			alert("All Red Color Field Must Not Be Empty");
+			return ;
+		}
 		
 		
 		
