--- a/src/main/resources/static/views/shop.html
+++ b/src/main/resources/static/views/shop.html
@@ -49,7 +49,7 @@ li:hover {
 					<ul class="list-group" ng-model="hidethis" ng-hide="hidethis">
 						<li class="list-group-item"
 							ng-repeat=" medicinedata in filterCountry"
-							ng-click="fillTextbox(medicinedata)">{{medicinedata.name}}</li>
+							ng-click="fillTextbox(medicinedata)">{{medicinedata.name+'  ('+medicinedata.type.name+') '}}</li>
 					</ul>
 				</div>
 				<!-- "medicine as medicine.name for medicine in medicines" -->
@@ -85,7 +85,7 @@ li:hover {
 					<tbody>
 						<tr ng-repeat="order in finalOrder" finalOrder>
 							<th scope="row">{{ $index+1	}}</th>
-							<td>{{order.product.name}}</td>
+							<td>{{order.product.name  +'  ('+ order.product.type.name+')'}}</td>
 							<td>{{order.quantity}}</td>
 							<td>{{order.quantity*order.product.priceIP}}</td>
 							<td><button class="btn btn-danger" ng-click="removeOrder(order,$index)">X</button></td>
@@ -131,44 +131,44 @@ li:hover {
   			<div class="form-group">
 		    <label class="control-label col-sm-2" for="medicineName">Customer Name:</label>
 		    <div class="col-sm-10">
-		      <input type="text" class="form-control" id="medicineName" placeholder="Enter Medicine Name"  ng-model="medicineName">
+		      <input type="text" class="form-control" id="medicineName" placeholder="Enter Medicine Name"  ng-model="customerName">
 		    </div>
 		  </div>
 		   <div class="form-group">
 		    <label class="control-label col-sm-2" for="medicineName">Customer Contact Number:</label>
 		    <div class="col-sm-10">
-		      <input type="text" class="form-control" id="medicineName" placeholder="Enter Medicine Name"  ng-model="medicineName">
+		      <input type="text" class="form-control" id="medicineName" placeholder="Enter Medicine Name"  ng-model="customerContactNo">
 		    </div>
 		  </div>
 		  	<div class="form-group">
 		    <label class="control-label col-sm-2" for="genericsName">Comision*:</label>
 		    <div class="col-sm-10">
-		      <input type="number" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="medicinePrice">
+		      <input type="number" class="form-control" id="genericsName" placeholder="Enter Generics Name" ng-change="calculateComision()" ng-model="comision">
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label class="control-label col-sm-2" for="genericsName" >Total Amount: </label>
 		    <div class="col-sm-10">
-		      <input type="number" class="form-control" id="genericsName" placeholder=""  ng-model="totalAmount">
+		      <input type="number" class="form-control" id="genericsName" placeholder=""  ng-change="calculateComision()" ng-model="totalAmount">
 		    </div>
 		  </div>
 		  	<div class="form-group">
 		    <label class="control-label col-sm-2" for="genericsName">Total Amount(With Commision):</label>
 		    <div class="col-sm-10">
-		      <input type="number" class="form-control" id="genericsName" placeholder=""  ng-model="medicinePrice" readonly>
+		      <input type="number" class="form-control" id="genericsName" placeholder=""  ng-model="medicinePriceWithComision" readonly>
 		    </div>
 		  </div>		  
 		 <div class="form-group">
 		    <label class="control-label col-sm-2" for="genericsName">Payment*:</label>
 		    <div class="col-sm-10">
-		      <input type="number" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="medicinePrice">
+		      <input type="number" class="form-control" id="genericsName" placeholder="Enter Generics Name"  ng-model="customerPaying">
 		    </div>
 		  </div>
 		</form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button  ng-click="onClickMedicineBtnSubmit()" class="btn btn-primary">Save Sales</button>
+        <button  class="btn btn-primary" ng-click="submitOrder()" >Save Sales</button>
       </div>
     </div>
   </div>
@@ -185,6 +185,9 @@ li:hover {
 		var productCounter=0;
 		var selected;
 		$scope.totalAmount=0;
+		$scope.comision=0;
+		$scope.medicinePriceWithComision=0;
+		$scope.customerPaying=$scope.medicinePriceWithComision;
    		function loadMedicine(){
 			  $http({
 				    method : "GET",
@@ -223,6 +226,8 @@ li:hover {
 			if($scope.medicine && $scope.quantity  && selected ){
 				var tempObj={"product":selected,"quantity":$scope.quantity};
 				$scope.totalAmount+=Number(selected.priceIP)* Number($scope.quantity);
+				$scope.medicinePriceWithComision=$scope.totalAmount-( $scope.totalAmount *($scope.comision/100));
+				$scope.customerPaying=$scope.medicinePriceWithComision;
 				selected="";
 				$scope.quantity="";
 				$scope.medicine="";
@@ -236,6 +241,8 @@ li:hover {
 		 	tempFinalOrder = $scope.finalOrder.filter((value, index,tempFinalOrder)=>{
 		 		if(value.product.medicine_id==order.product.medicine_id && orderindex==index){
 		 			$scope.totalAmount-=Number(order.product.priceIP)* Number(order.quantity);
+					$scope.medicinePriceWithComision=$scope.totalAmount-( $scope.totalAmount *($scope.comision/100));
+					$scope.customerPaying=$scope.medicinePriceWithComision;
 		 			return false;
 		 		}return true;
 			}); 
@@ -243,6 +250,59 @@ li:hover {
 		 	tempFinalOrder=[];
 		}
 		
+		
+		$scope.calculateComision= function() {
+			if($scope.comision <=10 && $scope.comision >=0){
+				$scope.medicinePriceWithComision=$scope.totalAmount-( $scope.totalAmount *($scope.comision/100));
+				$scope.customerPaying=$scope.medicinePriceWithComision;
+			}else{
+				alert("Comision Is Exciding Buying Rate");
+				$scope.comision=0;
+				
+			}
+
+		}
+
+		$scope.submitOrder= function() {
+			if($scope.totalAmount >0 ){
+			var customer={"customerName":$scope.customerName,
+						  "customerContactNo":$scope.customerContactNo,
+						  "totalPrice":$scope.totalAmount,
+						  "payment":$scope.customerPaying,
+						  "comision":$scope.comision,
+						  "salesBy":{"person_id":1,"name":"Abu Bakkar"}};
+			var orders={"orders":$scope.finalOrder,
+						"customer":customer
+						};
+						console.log(orders);
+			  $http({
+				    method : "POST",
+				      url : "/customer/sale",
+				  	  data: JSON.stringify(orders)
+				  }).then(function mySuccess(response) {
+				  	//generate PDF and Print It
+				  	$("#customerInfoModal").modal("hide");
+					 alert("Order Submited Sucessfully");
+					 $scope.customerName="";
+					 $scope.customerContactNo="";
+					 $scope.totalAmount=0;
+					 $scope.customerPaying=0;
+					 $scope.comision=0;
+					 $scope.finalOrder=[];
+					 tempFinalOrder=[];
+					 selected="";
+					$scope.quantity="";
+					$scope.medicine="";
+					$scope.finalOrder=[];
+					  
+				  }, function myError(response) {
+				   alert("Failed to Submit This ORDER");
+				  });
+
+			}else{
+				alert("Information Is not Enough");
+			}
+		}
 		
 
 		
