--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -217,7 +217,7 @@
 		  <div class="form-group has-error has-feedback">
 		    <label class="control-label col-sm-2" for="genericsChemical">Medicine Type:</label>
 		    <div class="col-sm-10"> 
-		    	 <select class="custom-select" ng-model="medicineType"ng-options="type.id as type.name for type in types"></select>
+		    	 <select class="custom-select" ng-model="medicineType"ng-options="type as type.name for type in types"></select>
 		    	 <span class="glyphicon glyphicon-remove form-control-feedback"></span>
 		    </div>
 		  </div>
@@ -413,11 +413,12 @@
 			"name":$scope.medicineName,
 			"company_id":$scope.medicineCompany,
 			"generic_id":$scope.medicineGeneric,
-			"type_id":	$scope.medicineType,
+			"type":	$scope.medicineType,
 			"description":$scope.medicineDescription,
 			"dosage":$scope.medicineDosage,
 			"priceIP":$scope.medicinePrice
 			};
+		console.log(medicine);
 		  $http({
 			  method: 'POST',
 			  url:"/product/add",
