--- a/src/main/resources/static/views/shop.html
+++ b/src/main/resources/static/views/shop.html
@@ -149,7 +149,7 @@ li:hover {
 		  <div class="form-group">
 		    <label class="control-label col-sm-2" for="genericsName" >Total Amount: </label>
 		    <div class="col-sm-10">
-		      <input type="number" class="form-control" id="genericsName" placeholder=""  ng-change="calculateComision()" ng-model="totalAmount">
+		      <input type="number" class="form-control" id="genericsName" placeholder=""  ng-change="calculateComision()" ng-model="totalAmount" readonly>
 		    </div>
 		  </div>
 		  	<div class="form-group">
